--- a/index.html/development.html
+++ b/index.html/development.html
@@ -179,7 +179,7 @@
                         <input type="search" placeholder="Search ">
                     </div>
                     <div class="line"></div>
-                    <div class="telent-box">Telent
+                    <div class="telent-box"><h6>Telent  <div class="icon-box-telent-box"><i class='bx bx-chevron-down'></i></div></h6>
                         <div class="drop-down-box-telet-box">
                             <div class="three-opt">
                                 <div class="opt">
@@ -206,7 +206,7 @@
 
                             </div>
                         </div>
-                        <div class="icon-box-telent-box"><i class='bx bx-chevron-down'></i></div>
+                       
 
                     </div>
 
@@ -243,6 +243,7 @@
         </div>
 
     </header>
+
     <main class="development-main">
         <div class="big-container">
             <div class="green-box-development-main">
