--- a/index.html/enterprince.html
+++ b/index.html/enterprince.html
@@ -258,7 +258,7 @@
                                 <p>Access the top 1% of talent on a full-service Enterprise platform, customized to meet
                                     your needs. This is how flexibility works now.</p>
                             </div>
-                            <span class="white-btn"><a href="#">Let's Talk</a></span>
+                            <button><a href="#">Let's Talk</a></button>
                         </div>
                     </div>
                     <div class="right-side-blue-container">
@@ -273,7 +273,7 @@
                         <span class="small-btn"><a href="#">Let's Talk</a></span>
                     </div>
                     <div class="right-side-pink-container">
-                        <div class="img"><img src="/images/smallWomen.jpg" alt=""></div>
+                        <div class="img"></div>
                     </div>
                 </div>
             </section>
