--- a/index.html/development.html
+++ b/index.html/development.html
@@ -257,7 +257,7 @@
                             <p>Hire independent professionals to shorten development cycles, bury backlogs, and drive
                                 product growth.</p>
                         </div>
-                        <span class="small-white-btn"><a href="Account.html">Get Started</a></span>
+                       <button class="small-white-btn"><a href="Account.html">Get Started</a></button>
                     </div>
 
                 </div>
