--- a/index.html/enterprince.html
+++ b/index.html/enterprince.html
@@ -270,7 +270,7 @@
                 <div class="pink-container">
                     <div class="left-side-pink-container">
                         <h3>Learn how Enterprise Suite can help you grow your business</h3>
-                        <span class="small-btn"><a href="#">Let's Talk</a></span>
+                        <button class="small-btn"><a href="#">Let's Talk</a></button>
                     </div>
                     <div class="right-side-pink-container">
                         <div class="img"></div>
